# SimpleSTL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
implementation/: allocator.hpp  allocator.impl.hpp  allocator_traits.hpp  allocator_traits.impl.hpp  enable_if.hpp  vector.impl.hpp
include/: memory.hpp  vector.hpp
src/: void.cpp
tests/: CMakeLists.txt  allocatorTests.hpp  main.cpp
