set_property( GLOBAL PROPERTY USE_FOLDERS ON) #Solution folders for Visual Studio
project(SimpleSTL CXX)
cmake_minimum_required(VERSION 2.8.8) #Arbitrary

if(MSVC)
  set(CMAKE_CXX_FLAGS_DEBUG          "/MTd /D_ITERATOR_DEBUG_LEVEL=0 /Ob0 /Od /DWIN32 /D_WINDOWS /W4 /Zi /RTC1 /DEBUG /D_VARIADIC_MAX=10")
  set(CMAKE_CXX_FLAGS_MINSIZEREL     "/MT  /D_ITERATOR_DEBUG_LEVEL=0 /O1     /DWIN32 /D_WINDOWS /W3 /D NDEBUG /W4  /D_VARIADIC_MAX=10")
  set(CMAKE_CXX_FLAGS_RELEASE        "/MT  /D_ITERATOR_DEBUG_LEVEL=0 /Ox     /DWIN32 /D_WINDOWS /W3 /D NDEBUG /W4  /D_VARIADIC_MAX=10")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MT  /D_ITERATOR_DEBUG_LEVEL=0 /O2     /DWIN32 /D_WINDOWS /W3 /D NDEBUG /W4 /Zi /DEBUG /D_VARIADIC_MAX=10")
#  set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_RELEASE})

  set(CMAKE_CXX_FLAGS_DEBUG_INIT          "${CMAKE_CXX_FLAGS_DEBUG}")
  set(CMAKE_CXX_FLAGS_MINSIZEREL_INIT     "${CMAKE_CXX_FLAGS_MINSIZEREL}")
  set(CMAKE_CXX_FLAGS_RELEASE_INIT        "${CMAKE_CXX_FLAGS_RELEASE}")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
else()
  if(APPLE)
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -std=c++11 -stdlib=libc++")
    set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} " -std=c++11 -stdlib=libc++")
    set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} " -std=c++11 -stdlib=libc++")
    set(CMAKE_CXX_FLAGS_MINSIZEREL ${CMAKE_CXX_FLAGS_MINSIZEREL} " -std=c++11 -stdlib=libc++")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINGO} " -std=c++11 -stdlib=libc++")
  else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11")
    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -std=c++11")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINGO} -std=c++11")
  endif()
endif()


#Finally! My project
include_directories(./include ./implementation)
file(GLOB MYSTL_SOURCE ./src/*.cpp)
file(GLOB MYSTL_HEADERS ./include/*.hpp ./implementation/*.impl.hpp)
add_library(SimpleSTL STATIC ${MYSTL_HEADERS})

SET_TARGET_PROPERTIES(SimpleSTL PROPERTIES LINKER_LANGUAGE CXX)

#Test directory
add_subdirectory(tests)
